made a stopgap mobile version

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,6 +158,14 @@ h1 {
     padding: 0 10px;
 }
 
+#infowindow {
+    display: none;
+}
+
+.show-mobile {
+    display: none;
+}
+
 .filterBox {
     border-width: 0;
     grid-column: 1/-1;
@@ -186,4 +194,73 @@ h1 {
     content: "\A\A";
     white-space: pre;
 }
+
+@media only screen and (max-width: 600px) {
+    .infowindow {
+        width: 100%;
+        height: 100%;
+    }
+
+    /* change searchbar, sidebar, admin popup */
+
+    .square-img{
+        height: 100%;
+        max-height: 200px;
+        max-width: 200px;
+    }
+
+    .show-mobile {
+        display: flex;
+    }
+    .hide-mobile {
+        display: none;
+    }
+
+    #main{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #infowindow {
+        display: flex; /*???*/
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 100%;
+        left: 0;
+        opacity: 0;
+    }
+    
+    #mainSearch {
+        width: 100%;
+        height: 38px;
+        margin: 0;
+        padding: 0 0 0 55px;
+        border-top-right-radius: 500px;
+        border-bottom-right-radius: 500px;
+        border: 2px solid #ED1C24;
+    }
+
+    .searchWrapper img {
+        width: 38px;
+        height: 38px;
+        position: static;
+        z-index: auto;
+        padding: 5px 5px;
+        border: 2px solid #ED1C24;
+        display: block;
+        margin-top: -38px;
+    }
+    
+    .searchWrapper {
+        margin: 0 0 0 0;
+        z-index: auto;
+        position: static;
+    }
+
+    #sidebar{
+        display: none;
+    }
+  }
 
